# SkeletalAnimationOpenGL

./: CMakeLists.txt  Makefile  README.md  animation
media/: AnimHead.dae  test.dae
shader/: light.frag  light.vert  point.frag  point.vert  simple.frag  simple.vert  simple.vert_s
src/: Animation.hpp  AnimationController.cpp  AnimationController.hpp  AssimpLoader.cpp  AssimpLoader.hpp  Camera.hpp  FrameBuffer.cpp  FrameBuffer.hpp  KeyBoardHandler.hpp  Mesh.cpp  Mesh.hpp  RenderAbstraction.hpp  RenderContext.cpp  RenderContext.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  main.cpp
